--- a/Static/styles_dashboard.css
+++ b/Static/styles_dashboard.css
@@ -62,6 +62,20 @@ h1 {
     padding: 16px
 }
 
+.tableaux_Kpi {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #3d1fe63a;
+  border-radius: 8px;
+  box-shadow: 0 6px 18px rgba(6, 17, 172, 0.178);
+}
+
+.tableau-kpi th, .tableau-kpi td {
+  padding: 5px 10px;
+}
+
 @media (max-width:1000px) {
     .grid {
         grid-template-columns: repeat(2, minmax(0, 1fr))
