--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -125,16 +125,23 @@
         <figcaption style="margin-bottom:10px;">CA moyen par Ancienneté</figcaption>
         <canvas id="segCA" aria-label="Graphique du CA moyen par ancienneté" role="img"></canvas>
       </figure>
+        
+      <figure class="chartbox" style="grid-column: span 4;" aria-label="Top clients par CA">
+        <figcaption style="margin-bottom:10px;">Top Clients par Chiffre d'Affaires</figcaption>
+        <div class="tableaux_Kpi">
+          <canvas id="tableaux_Kpi" aria-label="top_clients" role="img"></canvas>
+        </div>
+      </figure>
+
     </section>
   </main>
 
- <script>
-  window.DASHBOARD_DATA = {
-    segLabels: {{ (segment_labels | default([], true)) | tojson }},
-    segCounts: {{ (segment_values | default([], true)) | tojson }},
-    segCAMoyen: {{ (segment_ca_moyen | default([], true)) | tojson }}
-  };
-</script>
+  <script>
+    const topClientsLabels = {{ top_clients_labels | default([]) | tojson }};
+    const topClientsValues = {{ top_clients_values | default([]) | tojson }};
+    const otherLabels = {{ other_labels | default([]) | tojson }};
+    const otherValues = {{ other_values | default([]) | tojson }};
+  </script>
 
 </body>
 
